# cpp_wrap_python_demo

./: ReadMe.md  Rectangle.cpp  cython_use_instruction.md  rect.cpp  rect.pyx  rect_test.py  setup.py
demo_cuda/: build.sh  calculate.h  cuda.pyx  demo_cuda.pxd  setup.py  test.py
demo_cuda/cpp/: CMakeLists.txt  calculate.cu  demo_cuda.cpp  demo_cuda.h
demo_dynamic/: build.sh  build_env.sh
demo_dynamic/c++/_code/: Rectangle.cpp
demo_dynamic/c++/_test/: test.cpp
demo_dynamic/python/: setup.py  test.py
demo_dynamic/python/_lib/: Rectangle.pxd  rect.cpp
demo_simple/: Rectangle.h  Rectangle.pxd  rect_test.py  setup.py
demo_static/c++/_code/: Rectangle.cpp
demo_static/c++/_lib/: Rectangle.h
demo_static/python/: setup.py
demo_static/python/_lib/: Rectangle.pxd  rect.cpp
